--- a/www/IUPUI.css
+++ b/www/IUPUI.css
@@ -8646,6 +8646,12 @@ button.close {
     }
 }
 
+@media screen and (min-width:1101px) and (max-width:1390px) {
+    .tab-content {
+        padding-top: 50px;
+    }
+}
+
 @media screen and (max-width:1100px) {
     #img-id {
         position: absolute;
